# Dockerfile.vim

./: CMakeLists.txt
